babybuddy/babybuddy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: babybuddy
  labels:
    app: babybuddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: babybuddy
  template:
    metadata:
      labels:
        app: babybuddy
    spec:
      containers:
        - name: babybuddy
          image: lscr.io/linuxserver/babybuddy:2.7.1
          volumeMounts:
            - name: config
              mountPath: /config
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: babybuddy
