babybuddy/babybuddy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: babybuddy
  namespace: babybuddy
  labels:
    app: babybuddy
spec:
  selector:
    app: babybuddy
  ports:
    - protocol: TCP
      port: 8000
      targetPort: http
