babybuddy/babybuddy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: babybuddy
  name: babybuddy
spec:
  ingressClassName: nginx
  rules:
    - host: babybuddy.192.168.0.240.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: babybuddy
                port:
                  number: 8000
